# TimeSeriesDecisionTrees

./: CMakeLists.txt  README.md  build_decision_tree.sh  compare_decision_trees.sh  generate_increasing_decreasing_data.sh
include/: confusion_matrix.h  decision_tree.h  directories_configuration.h  distance.h  distance_comparaison.h  distance_evaluation.h  distance_evaluation_configuration.h  distances_matrix.h  error_complexity_measure.h  evaluation_configuration.h  evaluation_estimators.h  instance.h  instances.h  leaf.h  leaf_error_complexity_measure.h  pruning.h  split_error_complexity_measure.h  tree.h  tree_configuration.h  tree_evaluation.h  tree_specifications.h  utils.h
output/: comparison.csv
src/: CMakeLists.txt  confusion_matrix.cc  decision_tree.cc  distance_comparaison.cc  distance_evaluation.cc  distance_evaluation_configuration.cc  distances_matrix.cc  evaluation_configuration.cc  evaluation_estimators.cc  pruning.cc  split_error_complexity_measure.cc  tree.cc  tree_configuration.cc  tree_evaluation.cc  tree_specifications.cc  utils.cc
src/distances/: CMakeLists.txt  dtw_value_distance.cc  lp_local_distance.cc
src/impurity/: CMakeLists.txt  entropy_impurity.cc
src/instances/: CMakeLists.txt  instance.cc  instances.cc
src/report/: CMakeLists.txt  decision_tree_report.cc  distance_comparaison_report.cc  distance_evaluation_report.cc  print_tree_json.cc  print_tree_latex.cc  pruning_report.cc  report.cc
src/split/: CMakeLists.txt  cluster_split.cc  improved_cluster_split.cc  plain_cluster_split.cc  split.cc  split_kind.cc  standard_split.cc
(+24 files in other folders)
